reorganised CMakeLists so vendors has it's own CMakeLists file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,11 @@ option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
 
 file(GLOB_RECURSE CORE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/src/*.c")
 
-add_subdirectory(vendor/sdl3)
+add_subdirectory(vendor)
 
-add_executable(${PROJECT_NAME}
+add_executable(${PROJECT_NAME})
+
+target_sources(${PROJECT_NAME} PRIVATE
     ${CORE_SOURCES}
 )
 
